core/externalnameservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: nginx-svc.argocd.svc.cluster.local
#  selector:
#    app: nginx-dep
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
#  selector:
#    app: nginx-dep.argocd
