core/grafanapublicservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-grafana
spec:
  type: ExternalName
  externalName: grafana.monitoring.svc.cluster.local
#  selector:
#    app: nginx-dep
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
  - port: 443
    name: https
    protocol: TCP
    targetPort: 443

#  selector:
#    app: nginx-dep.argocd
