core/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    external-dns.alpha.kubernetes.io/hostname: vectoria.online
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: vectoria.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-service
                port:
                  number: 80
    - host: argo.vectoria.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-argocd
                port:
                  number: 80
    - host: argo.vectoria.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-argocd
                port:
                  number: 443
    - host: grafana.vectoria.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-grafana
                port:
                  number: 80
